<resources>
    <string name="app_name">SportsCult</string>

    <string name="facebook_app_id">203157500160814</string>

    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="auth_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="gmail">Gmail</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="already_a_user">Already a user? </string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup2">Sign Up</string>
    <string name="not_already_a_user">Don\'t have an account? </string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="auth_age_grp">Age Group</string>
    <string name="next_match">No Upcoming Matches</string>
    <string name="coach_review">Coach\'s Review</string>
    <string name="coach_comment">Coach\'s Comment Here</string>
    <string name="my_video">My Videos</string>
    <string name="my_rank">Best Rank: 256</string>
    <string name="ask_info">Add Info</string>
    <string name="prompt_age_grp">Age Group</string>
    <string name="prompt_centre_name">Centre Name</string>
    <string name="prompt_ita_rank">ITA Rank (if any)</string>
    <string name="choose_sports">Choose your sports</string>
</resources>
